tests/integration/snapshots/integration__conformance__n_number_minus_sign_with_trailing_garbage.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[-foo]
stdout ---

stderr ---
error: expected digit following minus sign, found `f`
 --> stdin:1:2
  |
1 | [-foo]
  |  ^
  |  |
  |  minus sign found here
